---
source: src/linter.rs
expression: checks
---
- kind:
    DuplicateHandlerException:
      - OSError
  location:
    row: 17
    column: 9
  end_location:
    row: 17
    column: 25
  fix:
    patch:
      content: "OSError,"
      location:
        row: 17
        column: 9
      end_location:
        row: 17
        column: 25
    applied: false
- kind:
    DuplicateHandlerException:
      - MyError
  location:
    row: 28
    column: 9
  end_location:
    row: 28
    column: 25
  fix:
    patch:
      content: "MyError,"
      location:
        row: 28
        column: 9
      end_location:
        row: 28
        column: 25
    applied: false
- kind:
    DuplicateHandlerException:
      - re.error
  location:
    row: 49
    column: 9
  end_location:
    row: 49
    column: 27
  fix:
    patch:
      content: "re.error,"
      location:
        row: 49
        column: 9
      end_location:
        row: 49
        column: 27
    applied: false

